--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "eslint-webpack-plugin": "^3.2.0",
     "jest": "^28.1.0",
     "moment": "^2.29.3",
     "node-sass": "^7.0.1",
@@ -90,7 +91,6 @@
     "@typescript-eslint/parser": "^5.29.0",
     "babel-plugin-named-exports-order": "^0.0.2",
     "prop-types": "^15.8.1",
-    "typescript": "^4.7.4",
-    "webpack": "^5.73.0"
+    "typescript": "^4.7.4"
   }
 }
