--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "classnames": "^2.3.1",
     "eslint-webpack-plugin": "^3.2.0",
     "jest": "^28.1.0",
+    "json-server": "^0.17.0",
     "moment": "2.29.4",
     "node-sass": "^7.0.1",
     "normalize.css": "^8.0.1",
@@ -40,7 +41,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "fake-json": "json-server ./src/assets/db.json --watch --port 3001"
   },
   "eslintConfig": {
     "extends": [
@@ -89,7 +91,8 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
-    "@types/react": "^18.0.14",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/parser": "^5.29.0",
     "babel-plugin-named-exports-order": "^0.0.2",
