--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/classnames": "^2.3.1",
+    "@types/react-dnd": "^3.0.2",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.25",
@@ -16,6 +17,7 @@
     "eslint-webpack-plugin": "^3.2.0",
     "jest": "^28.1.0",
     "json-server": "^0.17.0",
+    "mapbox-gl": "^2.12.1",
     "moment": "2.29.4",
     "node-sass": "^8.0.0",
     "normalize.css": "^8.0.1",
@@ -98,6 +100,7 @@
     "@typescript-eslint/parser": "^5.29.0",
     "babel-plugin-named-exports-order": "^0.0.2",
     "prop-types": "^15.8.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "use-reducer-logger": "^1.0.2"
   }
 }
