--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/classnames": "^2.3.1",
     "@types/react-dnd": "^3.0.2",
-    "@types/react-redux": "^7.1.24",
+    "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux-logger": "^3.0.9",
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
@@ -33,6 +34,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.5",
     "uuid": "^8.3.2",
