--- a/package.json
+++ b/package.json
@@ -47,8 +47,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public",
+    "build-storybook": "cross-env NODE_OPTIONS=--openssl-legacy-provider build-storybook",
     "fake-json": "json-server ./src/assets/db.json --watch --port 3001"
+  },
+  "resolutions": {
+    "@storybook/react-docgen-typescript-plugin": "1.0.6--canary.9.cd77847.0"
   },
   "eslintConfig": {
     "extends": [
@@ -103,7 +106,7 @@
     "@typescript-eslint/parser": "^5.29.0",
     "babel-plugin-named-exports-order": "^0.0.2",
     "prop-types": "^15.8.1",
-    "typescript": "^4.7.4",
+    "typescript": "5.0.2",
     "use-reducer-logger": "^1.0.2"
   }
 }
