--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ant-design/icons": "^5.2.5",
     "@fontsource/alef": "^4.5.9",
     "@reduxjs/toolkit": "^1.8.3",
+    "@tanstack/react-query": "^4.33.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -24,6 +25,7 @@
     "mapbox-gl": "^2.12.1",
     "moment": "2.29.4",
     "muuri": "^0.9.5",
+    "muuri-react": "^3.1.7",
     "node-sass": "^8.0.0",
     "normalize.css": "^8.0.1",
     "react": "^18.1.0",
