--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.2.5",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fontsource/alef": "^4.5.9",
     "@reduxjs/toolkit": "^1.8.3",
     "@tanstack/react-query": "^4.33.0",
@@ -11,7 +13,6 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/classnames": "^2.3.1",
-    "@types/react-dnd": "^3.0.2",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-logger": "^3.0.9",
@@ -24,12 +25,10 @@
     "json-server": "^0.17.0",
     "mapbox-gl": "^2.12.1",
     "moment": "2.29.4",
-    "muuri": "^0.9.5",
-    "muuri-react": "^3.1.7",
     "node-sass": "^8.0.0",
     "normalize.css": "^8.0.1",
     "react": "^18.1.0",
-    "react-d3": "^0.4.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-map-gl": "^7.0.15",
@@ -107,6 +106,7 @@
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.17",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/parser": "^5.29.0",
